# secllm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.yml
config/: default.toml
docker/: README.md
docker/clickhouse/: 02_add_audit_metrics.sql  03_add_request_response_body.sql  init.sql
docker/postgres/: 00_create_database.sh  01_schema.sql  02_rls.sql  03_add_gemini.sql
docker/rabbitmq/: definitions.json  rabbitmq.conf
secllm-front/: Dockerfile  README.md  jest.config.ts  next.config.ts  package-lock.json  package.json  vercel.json
secllm-front/e2e/: auth.spec.ts
secllm-front/src/: middleware.ts
secllm-front/src/app/: globals.css  layout.tsx  providers.tsx
secllm-front/src/app/(dashboard)/: layout.tsx
secllm-front/src/hooks/: useAuth.ts  useClients.ts  useGovernance.ts
secllm-front/src/lib/: security.ts  validators.ts
secllm-front/src/services/: api-client.ts  auth.service.ts  billing.service.ts  clients.service.ts  governance.service.ts  logs.service.ts
secllm-front/src/stores/: auth.store.ts  theme.store.ts  ui.store.ts
secllm-front/src/types/: auth.ts  clients.ts  governance.ts  index.ts  logs.ts
src/: config.rs  error.rs  lib.rs  main.rs
src/application/: mod.rs  pipeline.rs  ports.rs
src/domain/: governance.rs  mod.rs  models.rs  pii.rs
src/infrastructure/: clickhouse.rs  mod.rs
src/infrastructure/http/: extractors.rs  mod.rs  openapi.rs  routes.rs  state.rs
src/infrastructure/logging/: mod.rs  rabbitmq_publisher.rs
src/infrastructure/privacy/: detector.rs  masker.rs  mod.rs
src/infrastructure/proxy/: mod.rs  reqwest_dispatcher.rs
src/infrastructure/vault/: mod.rs  redis_vault.rs
(+39 files in other folders)
