[package]
name = "secllm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
redis = { version = "0.24", features = ["tokio-comp"] }
lapin = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
jsonwebtoken = "9.2"
clickhouse = "0.11"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"